--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
 # Standard CSharp .hgignore / .gitignore
 
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+**/.history
+
+# End of https://www.gitignore.io/api/visualstudiocode
+
 # Visual Studio 2015 addition
 .vs/
 
