--- a/src/RoomBookings.API/Properties/launchSettings.json
+++ b/src/RoomBookings.API/Properties/launchSettings.json
@@ -9,14 +9,6 @@
     }
   },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "RoomBookings.API": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
@@ -24,7 +16,8 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "KEYVAULT_ENDPOINT": "https://lssd-roombookings.vault.azure.net/"
       }
     }
   }
