--- a/src/RoomBookings.Data/RoomBookings.Data.csproj
+++ b/src/RoomBookings.Data/RoomBookings.Data.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="MongoDB.Driver" Version="2.11.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RoomBookings\RoomBookings.csproj" />
+  </ItemGroup>
+
 </Project>
