--- a/src/RoomBookings.Web/RoomBookings.Web.csproj
+++ b/src/RoomBookings.Web/RoomBookings.Web.csproj
@@ -5,6 +5,11 @@
     <ProjectReference Include="..\RoomBookings.Data\RoomBookings.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.AzureKeyVault" Version="3.1.10" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="5.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
